crates/ty_python_types/resources/mdtest/snapshots/return_type.md_-_Function_return_type_-_Generator_functions_-_Asynchronous_(408134055c24a538).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: return_type.md - Function return type - Generator functions - Asynchronous
mdtest path: crates/ty_python_types/resources/mdtest/function/return_type.md
---

# Python source files

## mdtest_snippet.py

```
 1 | import types
 2 | import typing
 3 | 
 4 | async def f() -> types.AsyncGeneratorType:
 5 |     yield 42
 6 | 
 7 | async def g() -> typing.AsyncGenerator:
 8 |     yield 42
 9 | 
10 | async def h() -> typing.AsyncIterator:
11 |     yield 42
12 | 
13 | async def i() -> typing.AsyncIterable:
14 |     yield 42
15 | 
16 | async def j() -> str:  # error: [invalid-return-type]
17 |     yield 42
```

# Diagnostics

```
error[invalid-return-type]: Return type does not match returned value
  --> src/mdtest_snippet.py:16:18
   |
14 |     yield 42
15 |
16 | async def j() -> str:  # error: [invalid-return-type]
   |                  ^^^ expected `str`, found `types.AsyncGeneratorType`
17 |     yield 42
   |
info: Function is inferred as returning `types.AsyncGeneratorType` because it is an async generator function
info: See https://docs.python.org/3/glossary.html#term-asynchronous-generator for more details
info: rule `invalid-return-type` is enabled by default

```
